update : いろいろあげてみる

--- a/app/src/pug/templates/_layout.pug
+++ b/app/src/pug/templates/_layout.pug
@@ -1,6 +1,6 @@
 -
   var title = '';
-  var rootDir = 'public/'
+  var rootDir = 'ar-2020-awards/'
   var faviconPath = '../../materials/favicon/'
   var description = 'description';
   var ogp = {
@@ -62,6 +62,8 @@ html(lang='ja')
 
     //- Google Tag Manager
     //- script.
+    script(src='https://aframe.io/releases/0.8.2/aframe.min.js')
+    script(src='https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js')
 
   body
     block content
