--- a/app/src/pug/index.pug
+++ b/app/src/pug/index.pug
@@ -6,6 +6,7 @@ block variables
     var description = '説明';
 
 block content
-  .test
-    .test__title init.
-    .test__image
+  a-scene(embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false")
+    a-marker(type="pattern" url="../materials/marker/pattern-marker.patt")
+      a-box(position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red")
+    a-entity(camera)
