--- a/app/src/pug/index.pug
+++ b/app/src/pug/index.pug
@@ -8,7 +8,7 @@ block variables
 block content
   a-scene(embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false")
     a-assets
-      a-assets-item(id='#uribo' src='ar-2020-awards/materials/tree.glb')
+      a-assets-item(id='uribo' src='ar-2020-awards/materials/tree.glb')
     a-marker(type="pattern" url="ar-2020-awards/materials/pattern-marker.patt")
       a-entity(gltf-model="#uribo" scale="0.1 0.1 0.1" animation-mixer)
       //- a-box(position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red")
