--- a/app/src/css/common/_common.sass
+++ b/app/src/css/common/_common.sass
@@ -9,6 +9,7 @@ ul
 body
   position: relative
   font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif
+  overflow: hidden
 
 a
   text-decoration: none
