--- a/dev/src/css/modules/test.sass
+++ b/dev/src/css/modules/test.sass
@@ -1,19 +1,7 @@
 .test
-  width: 100%
-  height: 100vh
-  display: flex
-  flex-direction: column
-  align-items: center
-  justify-content: center
-  user-select: none
-  &__title
-    position: relative
-    color: $blue
-    font-size: 20px
-    font-weight: 800
-    padding: 20px
-  &__image
-    width: 100px
-    height: 100px
-    background: url(#{$imgPath}/test.svg)
-    cursor: pointer
+  position: fixed
+  top: 0
+  left: 0
+  width: 20px
+  height: 20px
+  background: black
